--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,7 @@
         "fideloper/proxy": "^4.0",
         "laravel/framework": "^6.2",
         "laravel/tinker": "^2.0",
+        "maatwebsite/excel": "^3.1",
         "ramsey/uuid": "^3.9"
     },
     "require-dev": {
