--- a/composer.json
+++ b/composer.json
@@ -15,8 +15,7 @@
         "laravel/framework": "^6.2",
         "laravel/tinker": "^2.0",
         "maatwebsite/excel": "^3.1",
-        "ramsey/uuid": "^3.9",
-        "rodenastyle/stream-parser": "^1.2"
+        "ramsey/uuid": "^3.9"
     },
     "require-dev": {
         "beyondcode/laravel-er-diagram-generator": "^1.4",
