--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,7 @@
         "laravel/framework": "^6.2",
         "laravel/tinker": "^2.0",
         "maatwebsite/excel": "^3.1",
+        "predis/predis": "^1.1",
         "ramsey/uuid": "^3.9"
     },
     "require-dev": {
