--- a/package.json
+++ b/package.json
@@ -15,13 +15,17 @@
         "bootstrap": "^4.0.0",
         "cross-env": "^6.0",
         "jquery": "^3.2",
-        "laravel-mix": "^5.0.1",
+        "laravel-mix": "^5.0.5",
         "lodash": "^4.17.20",
         "popper.js": "^1.12",
         "react": "^16.2.0",
         "react-dom": "^16.2.0",
         "resolve-url-loader": "^2.3.1",
-        "sass": "^1.20.1",
+        "sass": "^1.26.10",
         "sass-loader": "^8.0.0"
+    },
+    "dependencies": {
+        "react-router": "^5.2.0",
+        "react-router-dom": "^5.2.0"
     }
 }
